simples-app/5-2048-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: default
  name: ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/actions.response-503: '{"Type": "fixed-response", "FixedResponseConfig": {"ContentType":"text/plain", "StatusCode":"503", "MessageBody":"503 error text"}}'
    alb.ingress.kubernetes.io/subnets: 'subnet-0a7922447b6a37264, subnet-0b8ad91a1e575d574'
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: service-2048
              servicePort: 80
          - path: /nginx/*
            backend:
              serviceName: service-nginx 
              servicePort: 80
          - path: /503
            backend:
              serviceName: response-503
              servicePort: use-annotation
